--- a/Bigstore.com/appsettings.json
+++ b/Bigstore.com/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DataConnection": "Server=WIN-VD08C7OPT8H\\SQLEXPRESS; Database=BigStoreDB; Trusted_Connection=true; MultipleActiveResultSets=true;"
+    "DataConnection": "Server=WIN-VD08C7OPT8H\\SQLEXPRESS; Database=BigStoreDBS; Trusted_Connection=true; MultipleActiveResultSets=true;"
   },
 
   "Logging": {
